tests/fail/olasılık-yokluk.kip
(* Yokluk (boş olasılık) tekil tür uygulaması testi. *)
(bu tam-sayı olasılığının) değeri,
  yokluksa, 0;
  n'nin varlığıysa, n'dir.

(yokluğun değeri) yaz.
